# FSTSP_SA

./: README.md
FSTSP_CPU/: CMakeLists.txt  SA.cpp  SA.h  SA_MurrayInstance.cpp  SA_PonzaInstance.cpp  instance.h  mpi_utils.cpp  mpi_utils.h  read_MurrayInstance.cpp  read_PonzaInstance.cpp  result_MurrayInstance.txt  result_PonzaInstance.txt
FSTSP_CPU+GPU/: CMakeLists.txt  SA.cpp  SA.h  SA_MurrayInstance.cpp  cuda_evaluate.cu  cuda_evaluate.cuh  instance.cpp  metrics.h  read_PonzaInstance.h
FSTSP_GPU/: CMakeLists.txt  SA.cpp  SA.h  SA_MurrayInstance.cu  SA_PonzaInstance.cu  SA_device.cu  SA_device.cuh  instance.h  metrics.cpp  read_MurrayInstance.h  result_MurrayInstance.txt  result_PonzaInstance.txt
FSTSP_Serial/: CMakeLists.txt  SA.cpp  SA.h  SA_MurrayInstance.cpp  SA_PonzaInstance.cpp  instance.cpp  instance.h  read_MurryInstance.cpp
